@@ -1,49 +1,47 @@
 package devices;
 
+import utils.DeviceDefaults;
+
 import java.time.Clock;
-import java.util.Arrays;
 import java.util.List;
 
 public class GenericDevice extends Device {
 
-    @Override
-    public void status() {
-
-    }
-
+    // ─── Constructor ───
     public GenericDevice(String id, String name, DeviceType type, Clock clock) {
-        super(id, name, type, clock);
+        super(id, name, type, clock,
+                DeviceDefaults.getDefaultAutoOn(type),
+                DeviceDefaults.getDefaultAutoOn(type)); // Mirror OFF
     }
 
+    // ─── Available actions ───
     @Override
     public List<String> getAvailableActions() {
-        return Arrays.asList("on", "off", "status");
+        return List.of("on", "off", "status");
     }
 
+    // ─── Simulate an action ───
     @Override
     public void simulate(String action) {
         switch (action.toLowerCase()) {
-            case "on":
+            case "on" -> {
                 if (!isOn()) {
                     turnOn();
                     System.out.println("🔌 Generic device " + getName() + " turned ON.");
                 } else {
                     System.out.println("⚠️ " + getName() + " is already ON.");
                 }
-                break;
-            case "off":
+            }
+            case "off" -> {
                 if (isOn()) {
                     turnOff();
                     System.out.println("🛑 Generic device " + getName() + " turned OFF.");
                 } else {
                     System.out.println("⚠️ " + getName() + " is already OFF.");
                 }
-                break;
-            case "status":
-                System.out.println("📊 " + getType() + " " + getName() + " is " + (isOn() ? "ON" : "OFF"));
-                break;
-            default:
-                System.out.println("❓ Unknown action for generic device: " + action);
+            }
+            case "status" -> status();
+            default -> System.out.println("❓ Unknown action for generic device: " + action);
         }
     }
 
@@ -51,23 +49,14 @@ public class GenericDevice extends Device {
     public void simulate() {
         System.out.println("⚙️ Simulating generic device: " + getName());
     }
-
-    @Override
-    public String toDataString() {
-        return String.join("|",
-                getType().toString(),
-                getId(),
-                getName()
-        );
+    public void status() {
+        System.out.printf("📊 GenericDevice %s (%s) | Power: %s%n",
+                getName(), getId(), isOn() ? "ON" : "OFF");
     }
 
     @Override
     public String toString() {
-        return "devices.GenericDevice {" +
-                "name='" + getName() + '\'' +
-                ", id='" + getId() + '\'' +
-                ", type='" + getType() + '\'' +
-                ", power=" + (isOn() ? "On" : "Off") +
-                '}';
+        return String.format("GenericDevice{name='%s', id='%s', type='%s', power=%s}",
+                getName(), getId(), getType(), isOn() ? "ON" : "OFF");
     }
 }
